--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,13 @@
-accelerate==0.27.1
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.11
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.6.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==3.0.0
-attrs==24.2.0
-backoff==2.2.1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-bitsandbytes==0.42.0
-blinker==1.8.2
-build==1.2.2
-cachetools==5.5.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.7
-click==8.1.7
-coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-dataclasses-json==0.6.7
-datasets==2.17.0
-decorator==5.1.1
-Deprecated==1.2.14
-dill==0.3.8
-distro==1.9.0
-docstring_parser==0.16
-durationpy==0.7
-executing==2.1.0
-faiss-cpu==1.8.0.post1
-fastapi==0.115.0
-filelock==3.16.1
-Flask==3.0.3
-Flask-Cors==5.0.0
-flatbuffers==24.3.25
-fonttools==4.51.0
-frozenlist==1.4.1
-fsspec==2023.10.0
-geographiclib==2.0
-geopy==2.4.1
-google-auth==2.35.0
-googleapis-common-protos==1.65.0
-googlemaps==4.10.0
-grpcio==1.66.1
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.2
-huggingface-hub==0.25.1
-humanfriendly==10.0
-idna==3.8
-importlib_metadata==8.4.0
-importlib_resources==6.4.5
-ipython==8.30.0
-ipywidgets==8.1.5
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.5.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jupyterlab_widgets==3.0.13
-kiwisolver==1.4.5
-kubernetes==31.0.0
-langchain==0.3.0
-langchain-community==0.3.0
-langchain-core==0.3.5
-langchain-huggingface==0.1.0
-langchain-openai==0.2.0
-langchain-text-splitters==0.3.0
-langchainhub==0.1.21
-langsmith==0.1.127
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mmh3==5.0.1
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-mypy-extensions==1.0.0
-networkx==3.3
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.19.2
-openai==1.48.0
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-asgi==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-opentelemetry-util-http==0.48b0
-orjson==3.10.7
-overrides==7.7.0
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-patsy==0.5.6
-peft==0.8.2
-pexpect==4.9.0
-pillow==10.3.0
-posthog==3.6.6
-prompt_toolkit==3.0.48
-protobuf==4.25.5
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==17.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic-settings==2.5.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-pyparsing==3.1.2
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.2
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.8.1
-rsa==4.9
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-sentence-transformers==3.1.1
-setuptools==75.1.0
-shellingham==1.5.4
-shtab==1.7.1
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.35
-stack-data==0.6.3
-starlette==0.40.0
-statsmodels==0.14.2
-sympy==1.13.1
-tenacity==8.5.0
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-timm==1.0.12
-tokenizers==0.19.1
-torch==2.5.1
-torchvision==0.20.1
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.48.0
-trl==0.7.10
-typer==0.12.5
-types-python-dateutil==2.9.0.20240906
-types-requests==2.32.0.20240914
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tyro==0.8.11
-tzdata==2024.1
-urllib3==2.2.2
-uvicorn==0.30.6
-uvloop==0.20.0
-watchfiles==0.24.0
-wcwidth==0.2.13
-websocket-client==1.8.0
-websockets==13.1
-Werkzeug==3.0.6
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-xxhash==3.5.0
-yarl==1.12.1
-zipp==3.20.2
+torch>=1.9.0
+torchvision>=0.10.0
+timm>=0.4.12
+Pillow>=8.0.0
+matplotlib>=3.3.0
+numpy>=1.19.0
+Flask>=2.0.0
+flask-cors>=3.0.10
+pandas>=1.3.0
+scikit-learn>=1.0.0
+opencv-python>=4.5.0
+requests>=2.25.0
+tqdm>=4.60.0
