--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==2.3.3
+Flask==2.2.5
 flask-cors==4.0.0
-Pillow==10.0.1
-opencv-python==4.8.1.78
-numpy==1.24.3
-torch==2.0.1
-torchvision==0.15.2
-timm==0.9.2
-matplotlib==3.7.2
-scikit-learn==1.3.0
-pandas==2.0.3
-gunicorn==21.2.0
+Pillow==9.5.0
+opencv-python-headless==4.7.0.72
+numpy==1.23.5
+torch==1.13.1
+torchvision==0.14.1
+timm==0.6.12
+matplotlib==3.6.3
+scikit-learn==1.2.2
+pandas==1.5.3
+gunicorn==20.1.0
