--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+setuptools>=68.0.0
+wheel>=0.40.0
 Flask==2.3.3
 flask-cors==4.0.0
 Pillow==10.4.0
 opencv-python-headless==4.8.1.78
-numpy==1.24.3
+numpy>=2.0.0
 torch==2.0.1
 torchvision==0.15.2
 timm==0.9.2
