--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ flask-cors==4.0.0
 Pillow==10.4.0
 opencv-python-headless==4.8.1.78
 numpy>=2.0.0
-torch==2.0.1
-torchvision==0.15.2
+torch>=2.5.0
+torchvision>=0.20.0
 timm==0.9.2
 matplotlib==3.7.2
 scikit-learn==1.3.0
