--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ opencv-python-headless==4.8.1.78
 numpy>=2.0.0
 torch>=2.5.0
 torchvision>=0.20.0
-timm==0.9.2
-matplotlib==3.7.2
-scikit-learn==1.3.0
-pandas==2.0.3
+timm>=0.9.12
+matplotlib>=3.8.0
+scikit-learn>=1.3.0
+pandas>=2.1.0
 gunicorn==21.2.0
