--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask==2.3.3
 flask-cors==4.0.0
 Pillow==10.4.0
 opencv-python-headless==4.8.1.78
-numpy>=2.0.0
+numpy==1.24.3
 torch>=2.5.0
 torchvision>=0.20.0
 timm>=0.9.12
