--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ wheel>=0.40.0
 Flask==2.3.3
 flask-cors==4.0.0
 Pillow==10.4.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
+opencv-python-headless>=4.9.0
+numpy>=1.26.0
 torch>=2.5.0
 torchvision>=0.20.0
 timm>=0.9.12
